--- a/src/main/resources/cmsp/autoqc/visualizer/MainPageGui.fxml
+++ b/src/main/resources/cmsp/autoqc/visualizer/MainPageGui.fxml
@@ -100,12 +100,12 @@
                                 <Font size="16.0" />
                             </font>
                         </Label>
-                        <Label layoutX="14.0" layoutY="65.0" text="Configuration:">
+                        <Label layoutX="14.0" layoutY="65.0" text="Configuration / Column:">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </Label>
-                        <Label layoutX="14.0" layoutY="96.0" text="Matrix:">
+                        <Label layoutX="14.0" layoutY="96.0" text="Standard Type:">
                             <font>
                                 <Font size="16.0" />
                             </font>
