--- a/src/main/resources/cmsp/quickqc/visualizer/AnnotationPage.fxml
+++ b/src/main/resources/cmsp/quickqc/visualizer/AnnotationPage.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="374.0" prefWidth="344.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cmsp.quickqc.visualizer.AnnotationPageController">
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="374.0" prefWidth="344.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cmsp.quickqc.visualizer.gui.AnnotationPageController">
    <children>
       <Label layoutX="14.0" layoutY="15.0" text="Date:">
          <font>
