--- a/src/main/resources/cmsp/quickqc/visualizer/SamplePage.fxml
+++ b/src/main/resources/cmsp/quickqc/visualizer/SamplePage.fxml
@@ -42,7 +42,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cmsp.quickqc.visualizer.SamplePageController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cmsp.quickqc.visualizer.gui.SamplePageController">
    <children>
       <SplitPane dividerPositions="0.5" focusTraversable="false" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0">
         <items>
