--- a/src/main/resources/cmsp/quickqc/visualizer/SetUpPage.fxml
+++ b/src/main/resources/cmsp/quickqc/visualizer/SetUpPage.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="90.0" prefWidth="360.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cmsp.quickqc.visualizer.SetUpPageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="90.0" prefWidth="360.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cmsp.quickqc.visualizer.gui.SetUpPageController">
    <children>
       <Button fx:id="pathSelectorButton" layoutX="322.0" layoutY="17.0" mnemonicParsing="false" onAction="#pathSelectorButtonClicked" text="..." />
       <TextField fx:id="pathField" layoutX="107.0" layoutY="17.0" prefHeight="25.0" prefWidth="215.0" />
