--- a/src/main/resources/cmsp/quickqc/visualizer/MainPageGui.fxml
+++ b/src/main/resources/cmsp/quickqc/visualizer/MainPageGui.fxml
@@ -33,7 +33,6 @@
 -->
 
 <?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -54,6 +53,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.chart.LineChart?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cmsp.quickqc.visualizer.gui.MainPageController">
     <children>
@@ -162,7 +162,7 @@
                                 <Font size="16.0" />
                             </font>
                         </CheckBox>
-                        <CheckBox fx:id="annotationCheckBox" disable="true" layoutX="235.0" layoutY="145.0" mnemonicParsing="false" selected="true" text="Show Annotations">
+                        <CheckBox fx:id="annotationCheckBox" disable="false" layoutX="235.0" layoutY="145.0" mnemonicParsing="false" selected="true" text="Show Annotations">
                             <font>
                                 <Font size="16.0" />
                             </font>
