Add listener for plot clicks.

--- a/src/main/resources/cmsp/quickqc/visualizer/MainPageGui.fxml
+++ b/src/main/resources/cmsp/quickqc/visualizer/MainPageGui.fxml
@@ -209,7 +209,7 @@
                             <content>
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                     <children>
-                                        <LineChart fx:id="lineChart" animated="false" layoutX="193.0" layoutY="49.0" prefHeight="546.0" prefWidth="1200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                        <LineChart fx:id="lineChart" animated="false" onMouseClicked="#plotClickListener" layoutX="193.0" layoutY="49.0" prefHeight="546.0" prefWidth="1200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                             <xAxis>
                                                 <CategoryAxis side="BOTTOM" fx:id="xAxis" />
                                             </xAxis>
