--- a/src/main/resources/cmsp/quickqc/visualizer/MainPageGui.fxml
+++ b/src/main/resources/cmsp/quickqc/visualizer/MainPageGui.fxml
@@ -33,9 +33,9 @@
 -->
 
 <?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -53,9 +53,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.chart.LineChart?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cmsp.quickqc.visualizer.gui.MainPageController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cmsp.quickqc.visualizer.gui.MainPageController">
     <children>
         <MenuBar VBox.vgrow="NEVER">
             <menus>
@@ -149,45 +148,14 @@
                             </font>
                         </RadioButton>
                         <ChoiceBox fx:id="dateRangeBox" layoutX="235.0" layoutY="65.0" onAction="#dataRangeListener" prefHeight="25.0" prefWidth="235.0" />
-                        <ChoiceBox fx:id="yAxisBox" layoutX="537.0" layoutY="65.0" prefWidth="150.0" />
                         <DatePicker fx:id="startDatePicker" disable="true" layoutX="235.0" layoutY="105.0" onAction="#datePickerListener" prefHeight="25.0" prefWidth="97.0" />
                         <DatePicker fx:id="endDatePicker" disable="true" layoutX="373.0" layoutY="105.0" onAction="#datePickerListener" prefHeight="25.0" prefWidth="97.0" />
-                        <CheckBox fx:id="groupXAxisCheckBox" disable="true" layoutX="537.0" layoutY="95.0" mnemonicParsing="false" text="Group X-Axis Values by Date">
-                            <font>
-                                <Font size="16.0" />
-                            </font>
-                        </CheckBox>
-                        <CheckBox fx:id="showExcludedPointsCheckBox" layoutX="537.0" layoutY="125.0" mnemonicParsing="false" selected="true" text="Show Excluded Points">
-                            <font>
-                                <Font size="16.0" />
-                            </font>
-                        </CheckBox>
-                        <CheckBox fx:id="annotationCheckBox" disable="false" layoutX="235.0" layoutY="145.0" mnemonicParsing="false" selected="true" text="Show Annotations">
-                            <font>
-                                <Font size="16.0" />
-                            </font>
-                        </CheckBox>
-                        <CheckBox fx:id="showGuideSetCheckBox" disable="true" layoutX="537.0" layoutY="155.0" mnemonicParsing="false" text="Show Guide Set">
-                            <font>
-                                <Font size="16.0" />
-                            </font>
-                        </CheckBox>
-                        <Label layoutX="693.0" layoutY="65.0" text="Y-Axis Scale">
-                            <font>
-                                <Font size="16.0" />
-                            </font>
-                        </Label>
                         <Label layoutX="58.0" layoutY="31.0" text="Plot Type:" underline="true">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </Label>
                         <Label layoutX="312.0" layoutY="31.0" text="Plot Range:" underline="true">
-                            <font>
-                                <Font size="16.0" />
-                            </font>
-                        </Label>
-                        <Label layoutX="604.0" layoutY="31.0" text="View Options:" underline="true">
                             <font>
                                 <Font size="16.0" />
                             </font>
@@ -209,7 +177,7 @@
                             <content>
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                     <children>
-                                        <LineChart fx:id="lineChart" animated="false" onMouseClicked="#plotClickListener" layoutX="193.0" layoutY="49.0" prefHeight="546.0" prefWidth="1200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                        <LineChart fx:id="lineChart" animated="false" layoutX="193.0" layoutY="49.0" onMouseClicked="#plotClickListener" prefHeight="546.0" prefWidth="1200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                             <xAxis>
                                                 <CategoryAxis side="BOTTOM" fx:id="xAxis" />
                                             </xAxis>
