--- a/src/main/resources/cmsp/quickqc/visualizer/MainPageGui.fxml
+++ b/src/main/resources/cmsp/quickqc/visualizer/MainPageGui.fxml
@@ -35,8 +35,8 @@
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -50,8 +50,11 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cmsp.quickqc.visualizer.gui.MainPageController">
@@ -65,6 +68,12 @@
                         <MenuItem mnemonicParsing="false" text="Quit" />
                     </items>
                 </Menu>
+            <Menu mnemonicParsing="false" text="Edit">
+              <items>
+                <MenuItem mnemonicParsing="false" onAction="#menuEditDefaultListener" text="Default" />
+                  <MenuItem mnemonicParsing="false" onAction="#menuEditRefreshListener" text="Refresh" />
+              </items>
+            </Menu>
                 <Menu mnemonicParsing="false" text="Help">
                     <items>
                         <MenuItem mnemonicParsing="false" text="About AutoQC" />
@@ -81,40 +90,36 @@
                                 <Font name="Arial Black" size="18.0" fx:id="x1" />
                             </font>
                         </Label>
-                        <ChoiceBox fx:id="instrumentBox" layoutX="222.0" layoutY="34.0" onAction="#instrumentBoxListener" prefWidth="150.0" />
-                        <ChoiceBox fx:id="configurationBox" layoutX="222.0" layoutY="65.0" prefWidth="150.0" />
-                        <ChoiceBox fx:id="matrixBox" layoutX="222.0" layoutY="96.0" onAction="#matrixBoxListener" prefWidth="150.0" />
-                        <Button fx:id="submitButton" disable="true" layoutX="14.0" layoutY="158.0" mnemonicParsing="false" onAction="#submitButtonClick" text="Submit">
-                            <font>
-                                <Font size="14.0" />
-                            </font>
-                        </Button>
-                        <Button fx:id="resetButton" layoutX="94.0" layoutY="158.0" mnemonicParsing="false" onAction="#setResetButton" prefWidth="62.6666" text="Reset">
-                            <font>
-                                <Font size="14.0" />
-                            </font>
-                        </Button>
-                        <Label layoutX="14.0" layoutY="34.0" text="Instrument:">
+                        <ChoiceBox fx:id="instrumentBox" layoutX="172.0" layoutY="37.0" onAction="#instrumentBoxListener" prefHeight="25.0" prefWidth="200.0" />
+                        <ChoiceBox fx:id="configurationBox" layoutX="172.0" layoutY="69.0" onAction="#configBoxListener" prefHeight="25.0" prefWidth="200.0" />
+                        <ChoiceBox fx:id="matrixBox" layoutX="172.0" layoutY="101.0" onAction="#matrixBoxListener" prefHeight="25.0" prefWidth="200.0" />
+                        <Label layoutX="14.0" layoutY="37.0" text="Instrument:">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </Label>
-                        <Label layoutX="14.0" layoutY="65.0" text="Configuration / Column:">
+                        <Label layoutX="14.0" layoutY="69.0" text="Configuration:">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </Label>
-                        <Label layoutX="14.0" layoutY="96.0" text="Standard Type:">
+                        <Label layoutX="14.0" layoutY="101.0" text="Matrix / Solution:">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </Label>
-                        <Label layoutX="14.0" layoutY="126.0" text="Report Type:">
+                        <Label layoutX="207.0" layoutY="131.0" text="Report Metric:">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </Label>
-                        <ChoiceBox fx:id="reportBox" layoutX="222.0" layoutY="127.0" onAction="#reportBoxListener" prefWidth="150.0" />
+                        <ChoiceBox fx:id="reportBox" layoutX="207.0" layoutY="159.0" onAction="#reportBoxListener" prefHeight="25.0" prefWidth="165.0" />
+                  <ChoiceBox fx:id="standardBox" layoutX="14.0" layoutY="159.0" onAction="#standardBoxListener" prefHeight="25.0" prefWidth="183.0" />
+                  <Label layoutX="14.0" layoutY="131.0" text="Standard:">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
                     </children>
                 </AnchorPane>
                 <AnchorPane prefHeight="195.0" prefWidth="691.0" SplitPane.resizableWithParent="false">
@@ -124,7 +129,7 @@
                                 <Font name="Arial Black" size="18.0" fx:id="x11" />
                             </font>
                         </Label>
-                        <RadioButton fx:id="leveyJenningsButton" layoutX="25.0" layoutY="65.0" mnemonicParsing="false" selected="true" text="Levey-Jennings">
+                        <RadioButton fx:id="leveyJenningsButton" layoutX="19.0" layoutY="65.0" mnemonicParsing="false" onAction="#plotTypeListener" selected="true" text="Levey-Jennings">
                             <toggleGroup>
                                 <ToggleGroup fx:id="plot" />
                             </toggleGroup>
@@ -132,39 +137,100 @@
                                 <Font size="16.0" />
                             </font>
                         </RadioButton>
-                        <RadioButton fx:id="movingRangeButton" layoutX="25.0" layoutY="95.0" mnemonicParsing="false" text="Moving Range" toggleGroup="$plot">
+                        <RadioButton fx:id="movingRangeButton" layoutX="19.0" layoutY="96.0" mnemonicParsing="false" onAction="#plotTypeListener" text="Moving Range" toggleGroup="$plot">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </RadioButton>
-                        <RadioButton fx:id="cusummButton" disable="true" layoutX="25.0" layoutY="125.0" mnemonicParsing="false" text="CUSUMm" toggleGroup="$plot">
+                        <RadioButton fx:id="cusummButton" disable="true" layoutX="19.0" layoutY="127.5" mnemonicParsing="false" text="CUSUM Mean" toggleGroup="$plot">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </RadioButton>
-                        <RadioButton fx:id="cusumvButton" disable="true" layoutX="25.0" layoutY="155.0" mnemonicParsing="false" text="CUSUMv" toggleGroup="$plot">
+                        <RadioButton fx:id="cusumvButton" disable="true" layoutX="19.0" layoutY="159.0" mnemonicParsing="false" text="CUSUM Var." toggleGroup="$plot">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </RadioButton>
-                        <ChoiceBox fx:id="dateRangeBox" layoutX="235.0" layoutY="65.0" onAction="#dataRangeListener" prefHeight="25.0" prefWidth="235.0" />
-                        <DatePicker fx:id="startDatePicker" disable="true" layoutX="235.0" layoutY="105.0" onAction="#datePickerListener" prefHeight="25.0" prefWidth="97.0" />
-                        <DatePicker fx:id="endDatePicker" disable="true" layoutX="373.0" layoutY="105.0" onAction="#datePickerListener" prefHeight="25.0" prefWidth="97.0" />
-                        <Label layoutX="58.0" layoutY="31.0" text="Plot Type:" underline="true">
+                        <ChoiceBox fx:id="dateRangeBox" layoutX="177.0" layoutY="65.0" onAction="#dataRangeListener" prefHeight="25.0" prefWidth="235.0" />
+                        <DatePicker fx:id="startDatePicker" disable="true" layoutX="177.0" layoutY="113.0" onAction="#datePickerListener" prefHeight="25.0" prefWidth="110.0" />
+                        <DatePicker fx:id="endDatePicker" disable="true" layoutX="303.0" layoutY="113.0" onAction="#datePickerListener" prefHeight="25.0" prefWidth="110.0" />
+                        <Label layoutX="52.0" layoutY="37.0" text="Plot Type:">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </Label>
-                        <Label layoutX="312.0" layoutY="31.0" text="Plot Range:" underline="true">
+                        <Label layoutX="254.0" layoutY="37.0" text="Plot Range:">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </Label>
-                        <Label layoutX="345.0" layoutY="105.0" text="to">
+                        <Label layoutX="292.0" layoutY="113.0" text="-">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </Label>
+                  <ComboBox fx:id="logNumberBox" editable="true" layoutX="178.0" layoutY="159.0" onKeyPressed="#logNumberBoxKeyListener" prefHeight="25.0" prefWidth="235.0" promptText="Log Number(s)">
+                     <tooltip>
+                        <Tooltip text="Press &quot;enter&quot; to submit.&#10;Separate multiple entries with ','" />
+                     </tooltip></ComboBox>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#dfebf5" height="155.0" layoutX="441.0" layoutY="36.0" stroke="BLACK" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeType="INSIDE" width="350.0" />
+                  <Label layoutX="564.0" layoutY="40.0" text="QC Summary">
+                     <font>
+                        <Font name="Rockwell" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="454.0" layoutY="70.0" text="N Entries" />
+                  <Line endX="224.0" layoutX="554.0" layoutY="65.0" startX="-100.0" strokeDashOffset="15.0" />
+                  <Label layoutX="454.0" layoutY="94.0" text="N Annot." />
+                  <Label layoutX="454.0" layoutY="118.0" text="First Entry" />
+                  <Label layoutX="454.0" layoutY="142.0" text="Last Entry" />
+                  <Label layoutX="618.0" layoutY="70.0" text="Series Mean" />
+                  <Label layoutX="618.0" layoutY="94.0" text="Series Min" />
+                  <Label layoutX="618.0" layoutY="118.0" prefHeight="10.0" prefWidth="79.0" text="Series Max" />
+                  <Label layoutX="618.0" layoutY="142.0" prefHeight="10.0" prefWidth="79.0" text="Series SD" />
+                  <Label layoutX="618.0" layoutY="165.0" prefHeight="10.0" prefWidth="79.0" text="Series RSD" />
+                  <Label layoutX="454.0" layoutY="165.0" text="Avg. Freq." />
+                  <Label fx:id="nEntriesLabel" alignment="CENTER" layoutX="517.0" layoutY="70.0" prefHeight="19.0" prefWidth="92.0" style="-fx-background-color: #F2F2F2; -fx-border-style: solid; -fx-border-color: gray;" textOverrun="CLIP">
+                     <font>
+                        <Font size="10.0" />
+                     </font></Label>
+                  <Label fx:id="seriesMeanLabel" alignment="CENTER" layoutX="689.0" layoutY="70.0" prefHeight="19.0" prefWidth="92.0" style="-fx-background-color: #F2F2F2; -fx-border-style: solid; -fx-border-color: gray;">
+                     <font>
+                        <Font size="10.0" />
+                     </font></Label>
+                  <Label fx:id="nAnnotLabel" alignment="CENTER" layoutX="517.0" layoutY="94.0" prefHeight="19.0" prefWidth="92.0" style="-fx-background-color: #F2F2F2; -fx-border-style: solid; -fx-border-color: gray;">
+                     <font>
+                        <Font size="10.0" />
+                     </font></Label>
+                  <Label fx:id="firstEntryLabel" alignment="CENTER" layoutX="517.0" layoutY="118.0" prefHeight="19.0" prefWidth="92.0" style="-fx-background-color: #F2F2F2; -fx-border-style: solid; -fx-border-color: gray;">
+                     <font>
+                        <Font size="10.0" />
+                     </font></Label>
+                  <Label fx:id="lastEntryLabel" alignment="CENTER" layoutX="517.0" layoutY="142.0" prefHeight="19.0" prefWidth="92.0" style="-fx-background-color: #F2F2F2; -fx-border-style: solid; -fx-border-color: gray;">
+                     <font>
+                        <Font size="10.0" />
+                     </font></Label>
+                  <Label fx:id="avgFreqLabel" alignment="CENTER" layoutX="517.0" layoutY="165.0" prefHeight="19.0" prefWidth="92.0" style="-fx-background-color: #F2F2F2; -fx-border-style: solid; -fx-border-color: gray;">
+                     <font>
+                        <Font size="10.0" />
+                     </font></Label>
+                  <Label fx:id="seriesMinLabel" alignment="CENTER" layoutX="689.0" layoutY="94.0" prefHeight="19.0" prefWidth="92.0" style="-fx-background-color: #F2F2F2; -fx-border-style: solid; -fx-border-color: gray;">
+                     <font>
+                        <Font size="10.0" />
+                     </font></Label>
+                  <Label fx:id="seriesMaxLabel" alignment="CENTER" layoutX="689.0" layoutY="118.0" prefHeight="19.0" prefWidth="92.0" style="-fx-background-color: #F2F2F2; -fx-border-style: solid; -fx-border-color: gray;">
+                     <font>
+                        <Font size="10.0" />
+                     </font></Label>
+                  <Label fx:id="seriesSDLabel" alignment="CENTER" layoutX="689.0" layoutY="142.0" prefHeight="19.0" prefWidth="92.0" style="-fx-background-color: #F2F2F2; -fx-border-style: solid; -fx-border-color: gray;">
+                     <font>
+                        <Font size="10.0" />
+                     </font></Label>
+                  <Label fx:id="seriesRsdLabel" alignment="CENTER" layoutX="689.0" layoutY="165.0" prefHeight="19.0" prefWidth="92.0" style="-fx-background-color: #F2F2F2; -fx-border-style: solid; -fx-border-color: gray;">
+                     <font>
+                        <Font size="10.0" />
+                     </font></Label>
                     </children>
                 </AnchorPane>
             </items>
@@ -228,5 +294,14 @@
                 </TabPane>
             </children>
         </AnchorPane>
+      <VBox alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: #E8E8E8; -fx-border-color: darkgray; -fx-effect: innershadow(three-pass-box, lightgray, 12 , 0.5, 1, 1);">
+         <children>
+            <Label fx:id="lastRefreshLabel" prefHeight="17.0" prefWidth="243.0" text="Label">
+               <font>
+                  <Font name="System Italic" size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
     </children>
 </VBox>
