--- a/src/main/resources/cmsp/quickqc/visualizer/MainPageGui.fxml
+++ b/src/main/resources/cmsp/quickqc/visualizer/MainPageGui.fxml
@@ -35,6 +35,7 @@
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -51,7 +52,11 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
@@ -59,7 +64,7 @@
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cmsp.quickqc.visualizer.gui.MainPageController">
     <children>
-        <MenuBar VBox.vgrow="NEVER">
+        <MenuBar prefHeight="32.0" prefWidth="1148.0">
             <menus>
                 <Menu mnemonicParsing="false" text="File">
                     <items>
@@ -294,14 +299,22 @@
                 </TabPane>
             </children>
         </AnchorPane>
-      <VBox alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: #E8E8E8; -fx-border-color: darkgray; -fx-effect: innershadow(three-pass-box, lightgray, 12 , 0.5, 1, 1);">
+      <HBox prefHeight="50.0" prefWidth="1200.0" style="-fx-border-color: #5F5F5F; -fx-background-color: #DDDDDD;">
          <children>
-            <Label fx:id="lastRefreshLabel" prefHeight="17.0" prefWidth="243.0" text="Label">
+            <Button fx:id="homeButton" alignment="CENTER" mnemonicParsing="false" prefHeight="37.0" prefWidth="40" onAction="#homeButtonClick">
+                <graphic>
+                    <ImageView fitHeight="25" fitWidth="25" pickOnBounds="true" preserveRatio="true">
+                        <Image url="@home-icon.png" />
+                    </ImageView>
+                </graphic>
+            </Button>
+            <Pane prefHeight="39.0" prefWidth="918.0" />
+            <Label fx:id="lastRefreshLabel" prefHeight="39.0" prefWidth="240.0" text="Label">
                <font>
                   <Font name="System Italic" size="12.0" />
                </font>
             </Label>
          </children>
-      </VBox>
+      </HBox>
     </children>
 </VBox>
