--- a/src/main/resources/cmsp/quickqc/visualizer/styleGuide.css
+++ b/src/main/resources/cmsp/quickqc/visualizer/styleGuide.css
@@ -78,5 +78,5 @@ Check Box Styling
 }
 
 .homeBackground {
-    -fx-background-image: url("homePage-background.png");
+    -fx-background-image: url("icons/homePage-background.png");
 }
